[package]
name = "image-collage"
version = "1.0.0"
edition = "2021"
authors = ["guitaripod"]
description = "Create beautiful 2x2 image collages with a blazing-fast Rust CLI and TUI"
readme = "README.md"
homepage = "https://github.com/guitaripod/image-collage"
repository = "https://github.com/guitaripod/image-collage"
license = "MIT OR Apache-2.0"
keywords = ["image", "collage", "photo", "cli", "tui"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image = "0.25"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ratatui = "0.28"
crossterm = "0.28"
